--- a/BUILDWEEK/assets/css/timerstyles.css
+++ b/BUILDWEEK/assets/css/timerstyles.css
@@ -7,8 +7,8 @@
   width: 160px;
   height: 160px;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 25px;
+  right: 70px;
   margin: 20px;
   transform: rotate(272deg);
 }
@@ -16,8 +16,7 @@
   height: 160px;
   width: 160px;
   border-radius: 50%;
-  box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.7),
-    -6px 6px 10px -1px rgba(0, 0, 0, 0.15);
+  box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.7), -6px 6px 10px -1px rgba(0, 0, 0, 0.15);
   padding: 20px;
 }
 .inner {
@@ -27,9 +26,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.7),
-    inset -4px 4px 6px -1px rgba(0, 0, 0, 0.2),
-    0.5px 0.5px 0px rgba(0, 0, 0, 0.7), 0px 12px 10px -10px rgba(0, 0, 0, 0.7);
+  box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.7), inset -4px 4px 6px -1px rgba(0, 0, 0, 0.2), 0.5px 0.5px 0px rgba(0, 0, 0, 0.7),
+    0px 12px 10px -10px rgba(0, 0, 0, 0.7);
 }
 #timer {
   font-size: 50px;
